# gmtk2021

./: .gitignore  .projections.json  CMakeLists.txt  LICENSE  notes.md  win_resources.rc
data/: 3d-hammer-bw.h  3d-hammer.h  Gidole-Regular.h  Makefile  basketball-jersey-bw.h  basketball-jersey.h  character.h  cooking-pot-bw.h  cooking-pot.h  credits.h  credits.txt  file.c  gamepad-bw.h  gamepad.h  gardening-shears-bw.h  gardening-shears.h  help.h  help.txt  journey-bw.h  journey.h  logo.afdesign  logo.h  logo.icns  paint-brush-bw.h  paint-brush.h  party-popper-bw.h  party-popper.h  shopping-bag-bw.h  shopping-bag.h  sloth-bw.h  sloth.h  wave-surfer-bw.h  wave-surfer.h  white-book-bw.h  white-book.h
inc/: creditscreen.h  font.h  game.h  gui.h  gui_helper.h  gui_personlist.h  icons.h  mainmenu.h  names.h  person.h  personarray.h  state.h
src/: creditscreen.c  font.c  game.c  gui.c  gui_helper.c  gui_personlist.c  main.c  mainmenu.c  names.c  person.c  personarray.c
web/: shell_minimal.html
